EEVEE UV not available until you go in and out of edit mode #55059

Closed
opened 2018-05-14 12:14:43 +02:00 by Dalai Felinto · 14 comments

Blender Version
Broken: 6a0d7f9e41
Worked: ?

Short description of error
On file load, the UV is not displaying correctly until I go in the edit mode.

Exact steps for others to reproduce the error
Open file (simple primitive with UV and a EEVEE material that uses the UV):
uv.blend

  • Switch to Rendered Mode.
  • You don't see the UV.
  • Now go in edit mode, UV is there.
  • If you go to object mode, UV is there as well.
**Blender Version** Broken: 6a0d7f9e41 Worked: ? **Short description of error** On file load, the UV is not displaying correctly until I go in the edit mode. **Exact steps for others to reproduce the error** Open file (simple primitive with UV and a EEVEE material that uses the UV): [uv.blend](https://archive.blender.org/developer/F3363028/uv.blend) * Switch to Rendered Mode. * You don't see the UV. * Now go in edit mode, UV is there. * If you go to object mode, UV is there as well.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

#56768 was marked as duplicate of this issue

#56768 was marked as duplicate of this issue
Clément Foucault was assigned by Dalai Felinto 2018-05-14 12:15:17 +02:00
Author
Owner

Added subscriber: @ideasman42
Removed subscriber: @dfelinto

Added subscriber: @ideasman42 Removed subscriber: @dfelinto

So basically it's because the batches are tagged as dirty when switching from workbench to eevee.

Adding BKE_mesh_batch_cache_dirty(object->data, BKE_MESH_BATCH_DIRTY_SHADING); at the right place should do the trick but I don't know where to put it.
Or maybe we should simply tag the whole scene to update in this case but I don't know how to do it either.

So basically it's because the batches are tagged as dirty when switching from workbench to eevee. Adding BKE_mesh_batch_cache_dirty(object->data, BKE_MESH_BATCH_DIRTY_SHADING); at the right place should do the trick but I don't know where to put it. Or maybe we should simply tag the whole scene to update in this case but I don't know how to do it either.
Clément Foucault removed their assignment 2018-05-14 17:44:32 +02:00
Sergey Sharybin was assigned by Clément Foucault 2018-05-14 17:44:32 +02:00

Added subscriber: @fclem

Added subscriber: @fclem
Author
Owner

Note this is related to #51931. However see concerns about this approach on #55326.

Note this is related to #51931. However see concerns about this approach on #55326.

Added subscriber: @carpe23

Added subscriber: @carpe23

Added subscribers: @Scyth, @brecht, @mont29

Added subscribers: @Scyth, @brecht, @mont29

This issue was referenced by 9cd4788403

This issue was referenced by 9cd47884032b7485aed3df6e5f3730929be89c65

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

@Sergey This is broken again. I can bisect if you want.

@Sergey This is broken again. I can bisect if you want.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Appears to work in latest builds.

Appears to work in latest builds.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55059
No description provided.