Fix T55059: EEVEE UV not available until you go in and out of edit mode

This is a dirty hack that should become irrelevant when depsgraph will
support CD masks.